# Orangic-Python-Package

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
examples/: examples.py
orangic/: __init__.py  client.py
tests/: test_client.py
